# amorphous-mof

./: .gitignore  README.md  pyproject.toml
data/mlips/ace/: zif-ace-24-cryst-10.yaml  zif-ace-24-cryst-100.yaml  zif-ace-24-cryst-25.yaml  zif-ace-24-cryst-5.yaml  zif-ace-24-cryst-50.yaml  zif-ace-24-cryst-75.yaml  zif-ace-24.yaml
data/mlips/gap/: README.md
data/mlips_validation/: sfig2-iteration_errors.json  sfig3-hypers_opt.json  sfig3-m3_learning_curve.json  sfig3-md_timings.json  sfig6-crystal_ev.json  sfig6-disordered_zif_energies.json
data/raw/: azif_rings.txt  cryst_zif_distrs.h5  gamma_data.h5  local_energies.h5  local_zinc_energies.h5  rmc_azif_distrs.h5
data/scattering/expt/: neutron-fq.txt  neutron-gr.txt  xray-fq.txt
data/scattering/mlp/: neutron-fq-1200K.txt  neutron-fq-1300K.txt  neutron-fq-1400K.txt  neutron-fq-1500K.txt  xray-fq-1200K.txt  xray-fq-1300K.txt  xray-fq-1400K.txt  xray-fq-1500K.txt
data/scattering/rmc/: neutron-fq.txt  xray-fq.txt
data/structures/si/: README.md  asi-gap_18-topology.data  asi-gap_18-topology.dump
data/structures/sio2/: README.md  asio2-gap_22-topology.cgd  asio2-gap_22-topology.data  asio2-gap_22-topology.dump  coe.cgd  lon.cgd  qtz.cgd
data/structures/zif/: cag.cgd  crb.cgd  dft.cgd  gis.cgd  m1-azif_ace_24-topology.data  m1-azif_ace_24-topology.dump  m1-zif_ace_24-anneal_1500K_5ns.data  mer.cgd  neb.cgd  (+21 more)
src/RingStatistics/: Manifest.toml  Project.toml
src/amorphous_mof/: paths.py  utils.py
src/pyhrmc/: __init__.py  box.py  graphs.py  hrmc.py  log.py  move.py  total_scattering.py  utils.py  vector.py
(+5 files in other folders)
